--- a/frontend/src/app/features/partner-list/partner-list.component.html
+++ b/frontend/src/app/features/partner-list/partner-list.component.html
@@ -1,5 +1,5 @@
 <p-toast position="top-center"></p-toast>
-<p-confirmPopup></p-confirmPopup> <div class="layout-content" style="max-width: 1400px; margin: 40px auto; padding: 0 20px;"></div>
+<p-confirmDialog [style]="{width: '450px'}" position="center"></p-confirmDialog>
 <div class="layout-content" style="max-width: 1400px; margin: 40px auto; padding: 0 20px;">
     
     <div class="flex justify-content-between align-items-center mb-4 flex-wrap gap-3">
