adding grower feature

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,6 +16,13 @@
                <span class="font-medium">Partnerek</span>
             </a>
 
+            <a routerLink="/growers" 
+               routerLinkActive="text-primary font-bold surface-100" 
+               class="p-element p-ripple p-button-text p-button-plain no-underline px-3 py-2 border-round transition-colors transition-duration-200 cursor-pointer flex align-items-center gap-2
+                      text-500 hover:text-primary hover:surface-100"> <i class="pi pi-briefcase text-lg"></i>
+               <span class="font-medium">Nevelők</span>
+            </a>
+
             <a routerLink="/leaderboard" 
                routerLinkActive="text-primary font-bold surface-100" 
                class="p-element p-ripple p-button-text p-button-plain no-underline px-3 py-2 border-round transition-colors transition-duration-200 cursor-pointer flex align-items-center gap-2
